--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: 'Roboto', sans-serif; }
+
+* {
+    font-size: 11pt;
+}
+
+.mat-search-icon{
+    cursor: pointer;color:blue
+}
+    
+.basic-container {
+    padding: 30px;
+}
+
+.mat-clear-icon,
+.mat-cancel-icon{
+  cursor: pointer;
+  color:red;
+}
