--- a/src/app/bbw/home/app.component.html
+++ b/src/app/bbw/home/app.component.html
@@ -33,8 +33,7 @@
       <ng-template mat-tab-label>
         {{tabData.caseId}} &nbsp;<mat-icon class="mat-cancel-icon" (click)="removeTab(index)">clear</mat-icon>
       </ng-template>
-      <!-- <app-case-id-details [caseIdData]="caseIdService.retrievedCaseInfo[selected]"></app-case-id-details> -->
-      <app-case-id-details></app-case-id-details>
+      <bbw-case-id-details></bbw-case-id-details>
     </mat-tab>
   </mat-tab-group>
 
