[BBW 19-OCT-2018], dynamic tabs, Seshapu, Srinivasarao(ss139t), ss139t@att.com

--- a/src/app/bbw/components/case-id/case-id-details/case-id-details.component.html
+++ b/src/app/bbw/components/case-id/case-id-details/case-id-details.component.html
@@ -1,7 +1,7 @@
 
-  <mat-toolbar style="height: 35px;">
+  <!-- <mat-toolbar style="height: 35px;">
       <span>{{openedSubModuleTitle}}</span>
-  </mat-toolbar>
+  </mat-toolbar> -->
   <p>
       case-id-details works! for case id= {{caseIdData.caseId}}
       case-id-details works! for case id= {{caseIdData.caseId}}
@@ -12,6 +12,5 @@
       case-id-details works! for case id= {{caseIdData.caseId}}
       case-id-details works! for case id= {{caseIdData.caseId}}
   </p>
-  
-
+  <br>
   
