[BBW 21-OCT-2018], Added Dynamic Component Rendering, Seshapu, Srinivasarao(ss139t), ss139t@att.com

--- a/src/app/bbw/components/case-id/case-id-details/case-id-details.component.html
+++ b/src/app/bbw/components/case-id/case-id-details/case-id-details.component.html
@@ -13,4 +13,4 @@
       case-id-details works! for case id= {{caseIdData.caseId}}
   </p>
   <br>
-  
+  <button routerLink="/brass">OpenModel</button>
