--- a/src/app/bbw/bbw-index.html
+++ b/src/app/bbw/bbw-index.html
@@ -7,7 +7,7 @@
   <title>Broadband Workflow</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./resources/img/favicon.ico">
 </head>
 <body>
   <bbw-root></bbw-root>
