--- a/src/app/bbw/components/home/app.component.html
+++ b/src/app/bbw/components/home/app.component.html
@@ -37,7 +37,8 @@
         <span>CASE INFO : {{tabData.caseId}}</span>&nbsp;&nbsp;&nbsp;
         <!-- <mat-icon (click)="goBack();" class="mat-search-icon">arrow_back</mat-icon> -->
       </mat-toolbar>
-      <router-outlet></router-outlet>
+      <!-- <router-outlet></router-outlet> -->
+      <bbw-base-comp></bbw-base-comp>
     </mat-tab>
   </mat-tab-group>
 
