--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,6 @@
   </h1>
   <img width="300" alt="Angular Logo" src="./assets/img/attlogo.ico">
 </div>
-
-
+<button (click)="getActivityLog()" >GetActivityLog</button>
+{{activityLog}}
+<bbw-activity-log></bbw-activity-log>
