--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,26 +1,6 @@
-/* Main Header START*/
-.main-header{
-    background-color: black;
-    color: white;
-    font-size: 11pt;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 2;
-    height: 40px;
-}
-.header-att-icon{
-    width: 50px;
-    position: relative;
-}
 .header-fill-remaining-space{
     flex: 1 1 auto;
 }
-.header-space{
-    padding: 2%;
-}
-/* Main Header END*/
 .header-main-menu{
     position: fixed;
     top: 40px;
@@ -39,3 +19,17 @@
   .side-nav-width-queues-wipbins{
       width: 15%;
   }
+
+.mat-clear-icon,
+.mat-cancel-icon{
+  cursor: pointer;
+  color:red;
+}
+
+.mat-search-icon{
+    cursor: pointer;
+    color:blue
+}
+.spaces{
+    padding-right: 1%;
+}
