--- a/src/app/modules/case/case-info/case-info.component.html
+++ b/src/app/modules/case/case-info/case-info.component.html
@@ -1,4 +1,6 @@
-Case INFO
+Case INFO : {{caseInfo.caseId}}
+ActivityLog : 
+{{caseInfo.activity}}
 <br>
-<button (click)="changeComp(1)" >activity Log</button> 
+<button (click)="changeComp(1)" >BRASS</button> 
 
