--- a/src/app/modules/case/activity-log/activity-log.component.html
+++ b/src/app/modules/case/activity-log/activity-log.component.html
@@ -1,5 +1,106 @@
-<p>
-  activity-log works!
-</p>
+<div>    
+  <span class="sideLeft">
+      <mat-form-field>
+          <mat-select  [(ngModel)]="firstList">
+            <mat-option *ngFor="let firstOrder of firstOrders" [value]="firstOrder">{{firstOrder}}</mat-option>            
+          </mat-select>
+        </mat-form-field>          
+  </span>
 
-<button (click)="gotoMoreInfo(0)" >back</button> 
+  <span class="sideMiddle">
+      <mat-form-field>
+          <mat-select [(ngModel)]="secondList">
+            <mat-option *ngFor="let secondOrder of secondOrders" [value]="secondOrder">{{secondOrder}}</mat-option>
+          </mat-select>
+        </mat-form-field>
+  </span>
+  <span class="sideRight">
+      <mat-form-field >
+          <input matInput [matDatepicker]="picker" placeholder="Choose a date" [(ngModel)]="datePick">
+          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>  
+  </span>   
+</div>
+
+<!--Radio Buttons-->
+<div id="table1">&nbsp;
+    <span class="siteRadio_1">
+        <mat-radio-button  value="1">Local Time</mat-radio-button>
+    </span>
+    <span class="siteRadio_2">
+        <mat-radio-button value="2">Site Time</mat-radio-button>
+    </span>
+
+<span>
+    <mat-form-field class="thirdDrop">
+        <mat-select [(ngModel)]="thirdList">
+          <mat-option *ngFor="let thirdOrder of thirdOrders" [value]="thirdOrder">{{thirdOrder}}</mat-option>                    
+        </mat-select>
+      </mat-form-field>
+</span>
+<span>
+    <button class="buttonRight" (click)="listClick()" mat-raised-button color="primary">List</button>
+</span>
+
+  
+</div>
+<!--Mat Table-->
+<div class="grid-container">
+<div class="data-table" >
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+  <!-- Position Column -->
+  <ng-container matColumnDef="Activity">
+      <th mat-header-cell *matHeaderCellDef> Activity </th>
+      <td mat-cell *matCellDef="let activityLog"> {{activityLog.title}} </td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="Create Date">
+      <th mat-header-cell *matHeaderCellDef> Create Date </th>
+         <td mat-cell *matCellDef="let activityLog"> {{activityLog.entryTime}} </td>
+  </ng-container>
+
+  <!-- Weight Column -->
+  <ng-container matColumnDef="User">
+    <th mat-header-cell *matHeaderCellDef> User </th>
+    <td mat-cell *matCellDef="let activityLog"> {{activityLog.loginName}} </td>
+  </ng-container>
+
+  <!-- Symbol Column -->
+  <ng-container matColumnDef="Additional Information">
+    <th mat-header-cell *matHeaderCellDef> Additional Information </th>
+    <td mat-cell *matCellDef="let activityLog"> {{activityLog.addnlInfo}} </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+  <tr mat-row class="result-row" *matRowDef="let row; columns: displayedColumns;" 
+                                  [ngClass]="{'highlight': selectedAct == row}"
+                                  (click)="setClickedRow(row)"></tr>
+  </table>      
+</div>
+</div>
+<br><br>
+<div>
+  <table style="width: 100%">
+      <tr>
+          <td> 
+              <b>Items :</b>&nbsp;
+              {{activityLog.length}}
+              <!-- <mat-form-field>
+                  <input matInput >{{activityLog.length}}
+              </mat-form-field> -->
+          </td>     
+      
+          <td style="text-align: center">
+              <button mat-raised-button color="primary" [disabled]="isOpenButtonDisabled" (click)="openButton()">Open</button>                
+          </td>
+          <td>&nbsp;</td>
+          <td>
+              <button class="sideRight" mat-raised-button color="primary">Done</button>      
+          </td>
+      </tr>
+  </table>
+</div>
+  
