--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="main-header">
-    <img class="header-att-icon" src="../assets/img/att.jpg">
+    <img class="header-att-icon" src="./assets/img/att.jpg">
     <span>Broadband Workflow</span>
     <span class="header-fill-remaining-space"></span>
     <span>{{userInfo.userName}} | {{userInfo.id}}</span>&nbsp;
