[ 22-NOV-2018 ] Added icons, logos, aligned rest URLS  and tested

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<bbw-header></bbw-header>
+<bbw-header [userInfo]="userInfo"></bbw-header>
 <!-- Menu Component -->
 <mat-toolbar class="header-main-menu">
     <mat-label class="spaces" color="primary">Case Id:</mat-label>
