--- a/src/app/modules/case/more-info/more-info.component.html
+++ b/src/app/modules/case/more-info/more-info.component.html
@@ -1,6 +1,6 @@
 <p>
-  more-info works!
+  Brass works!
 </p>
 
 <br>
-<button (click)="changeComp(1)" >back</button> 
+<button (click)="changeComp(0);" mat-raised-button color="primary">Back</button>
