[ 29-NOV-2018 ] Rest Urls and 2nd level authentication

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -3,6 +3,5 @@
     <span>Broadband Workflow</span>
     <span class="header-fill-remaining-space"></span>
     <span>{{userInfo.loginName}} | {{userInfo.userAttuid}}</span>&nbsp;
-    <mat-icon>person</mat-icon>
-    <a mat-button>Logout&nbsp;<mat-icon>power_settings_new</mat-icon></a>
+    <a mat-button>Logout&nbsp;</a>
 </mat-toolbar>
