--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -2,7 +2,6 @@
     <img class="header-att-icon" src="./assets/img/att.jpg">
     <span>Broadband Workflow</span>
     <span class="header-fill-remaining-space"></span>
-    <span>{{userInfo.loginName}} | {{userInfo.userAttuid}}</span>&nbsp;
-    <mat-icon>person</mat-icon>
-    <a mat-button>Logout&nbsp;<mat-icon>power_settings_new</mat-icon></a>
+    <span>{{userInfo?.loginName}} | {{userInfo?.userAttuid}}</span>&nbsp;
+    <a mat-button>Logout&nbsp;</a>
 </mat-toolbar>
