--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="main-header">
-    <img class="header-att-icon" src="./assets/img/att.jpg">
+    <i class="icon-att-globe"></i>
     <span>Broadband Workflow</span>
     <span class="header-fill-remaining-space"></span>
-    <span>{{userInfo?.loginName}} | {{userInfo?.userAttuid}}</span>&nbsp;
-    <a mat-button>Logout&nbsp;</a>
+    <span>{{userInfo?.loginName}} | {{userInfo?.userAttuid}}</span>&nbsp;<i class="icon-oneperson white"></i> 
+    <button class="btn btn-small white">Logout&nbsp;<i class="icon-controls-poweronoff white" role="img"></i></button>
 </mat-toolbar>
